feat: AI助手增强与知识库检索能力升级
- Assistant: 快捷问题管理、问题日志记录、消息来源标注、警告信息支持
- Knowledge: 图片理解服务、需求内容解析器、搜索范围配置、检索结果优化
- Workflow: 工作流历史记录、可视化配置增强
- LLM: 应用配置增强，支持图片理解场景
- Settings: AI助手设置页面、LLM配置页面优化
- Database: 5个数据库迁移脚本支持新功能
- Docs: 需求体AI检索设计文档